# second-language

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  app  app.py  cli  config.py  db.py  feeds.yaml  init_db.py  input.css  llm.py  llm_raw_lemma.py  llm_raw_sentence.py  normalization.py  pyproject.toml  rss.py  true
static/: output.css
templates/: 404.html  base.html  favorites.html  lemma_detail.html  login.html  sentence_detail.html  sentence_list.html
templates/partials/: chat_section.html  favorite_star.html  gloss_toggle.html  lemma_content.html  regenerate_form.html  sentence_content.html  sentence_list_inner.html  translations_toggle.html
